2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
   * extconf.rb: Exit with 1 when the package is not found.

2003-08-22  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtktreeview.c (treeview_insert_column): suppres warning.

	* src/rbgdkgc.c (gdkgc_set_dashes): fix to use RARRAY not RSTRING.

2003-08-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*.c: define enum/flags classes.

2003-08-20  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: check Xlib features only if gdk target is x11.

	* src/rbgdk.c: new module function Gdk.target which returns gdk
	target as a string.

	* src/rbgdkevent.c: use G_DEF_CONSTANTS() for
	GDK_TYPE_SCROLL_DIRECTION, GDK_TYPE_VISIBILITY_STATE,
	GDK_TYPE_CROSSING_MODE, GDK_TYPE_NOTIFY_TYPE, GDK_TYPE_PROPERTY_STATE
	and GDK_TYPE_WINDOW_STATE.

2003-08-19  KATO Kazuyoshi  <kzys@users.sf.net>

	* src/rbgdkdisplaymanager.c: Added.
	* src/rbgtklabel.c: Implement Gtk::Label#text=.
	* sample/gtk-demo/common.rb: Follow Demo::Main changes.
	* sample/gtk-demo/main.rb: Fix and destroy closed window.

2003-08-17  KATO Kazuyoshi  <kzys@users.sf.net>

	* sample/gtk-demo/stock_browser.rb: Added.
	* sample/gtk-demo/main.rb: When ARGV passed, Show only class/file
	which read from ARGV.
	* sample/gtk-demo/common.rb: Code cleanup.

2003-08-17 Martin Povolny <xpovolny@fi.muni.cz>
    * src/rbgdkatom.c: Fix memory leak in gdkatom_name reported by 
    Jan Becvar <jean@solnet.cz>.

2003-08-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkconst.c: Update version number.
	* src/depend: Use old style.
	* extconf.rb, src/rbgdk.c: Fix compile error for Win32.

2003-08-06  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgtktextbuffer.c (txt_insert_child_anchor): pass correct
	anchor to gtk_text_buffer_insert_child_anchor().

2003-08-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtktreemodel.c: Add Gtk::TreeModel#iter_first.
