@@ -1,3 +1,7 @@
+2003-08-28 Martin Povolny <xpovolny@fi.muni.cz>
+
+   * src/rbgtktreeview.c: fix non-functional treeview_get_path_at_pos
+
 2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                 
    * extconf.rb: Exit with 1 when the package is not found.
